[package]
name = "rp-alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-alloc = "0.6.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.8.0", features = ["critical-section"] }
static_cell = "2.1.0"


